Comentarios no TODO, e pqp extensoes existe por um motivo, entao use-as
git-svn-id: svn://svn/henriquelima/labprog@79 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 Colisoes (Massas? Criterio de colisao? Coeficiente de elasticidade?)
 Main robusto
+--- O que seria um main "robusto"? o que falta para ele se tornar um?
