movimentacao suavizada. UpdateTable e ojbect agora exigem tambem o argumento se mantem velocidade, uma vez que mudancas devem ocorrer uma vez por segundo, nao por frame. Por consequenca, updatekeepspeed e updatechangespeed foram nukados. Uma iteracao pro programa == 1 segundo. Se alguem tiver uma solucao melhor, sinta-se livre para voltar a revisao anterior. Ah, e precisamos melhorar a eficiencia, o programa da umas travadas de vez em quando.
git-svn-id: svn://svn/henriquelima/labprog@137 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/TODO.txt
+++ b/TODO.txt
@@ -67,3 +67,6 @@ Desenhar direito as coisas, fazer coisas alem de pessoinhas
 
 -----------
 Suavizar animações. acho que para isso, basta lidar com frequencia de atualizações e atualização de velocidades.
+
+-----------
+Melhorar eficiencia ou ajustar FPS e controlar frequencia de atualizações de acordo.
