Micromudanca no TODO: Evitar criacao de passageiros ja colidindo, para evitar que passageiros "nascam" dentro de outros? E do not ignorem log da revisao anterior
git-svn-id: svn://svn/henriquelima/labprog@138 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/TODO.txt
+++ b/TODO.txt
@@ -70,3 +70,6 @@ Suavizar animações. acho que para isso, basta lidar com frequencia de atualizaçõ
 
 -----------
 Melhorar eficiencia ou ajustar FPS e controlar frequencia de atualizações de acordo.
+
+-----------
+Evitar que passageiros sejam criados colidindo imediatamente?
