TODO: corrigir vazamento de memoria
git-svn-id: svn://svn/henriquelima/labprog@139 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/TODO.txt
+++ b/TODO.txt
@@ -73,3 +73,6 @@ Melhorar eficiencia ou ajustar FPS e controlar frequencia de atualizações de aco
 
 -----------
 Evitar que passageiros sejam criados colidindo imediatamente?
+
+-----------
+Corrigir Memory Leak
