soh o lembrete de que eu tenho que fazer o objecttable
git-svn-id: svn://svn/henriquelima/labprog@152 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/TODO.txt
+++ b/TODO.txt
@@ -76,3 +76,7 @@ Evitar que passageiros sejam criados colidindo imediatamente?
 
 -----------
 Ver se desenhos bugando são só aqui, e corrigir se possivel e necessario.
+
+-------------------------------------------------------------------------
+
+Criar objectTable.{c/h}
