Update no relatorio
git-svn-id: svn://svn/henriquelima/labprog@274 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -8,7 +8,7 @@
 
 \title{O Incrível Manual de \sout{LaTeX} Yarco Super-Híper}
 
-\author{André Mesquita Perera \and Henrique Gemignani Passos Lima \and Renan Teruo Carneiro}
+\author{André Mesquita Pereira \and Henrique Gemignani Passos Lima \and Renan Teruo Carneiro}
 
 \begin{document}
 
@@ -134,6 +134,17 @@ Para que passageiros sejam de fato resgatados, você deve ancorar pero dele, ent
 Você deve ter notado um arquivo chamado config.ini. Lá você pode editar o funcionamento do programa à vontade. Note que
 a parte de controles envolve números, que correspondem às teclas pressionadas. Se o Makefile colaborar, deve estar dispo-
 nível uma ferramenta que lhe dirá quais são os números associados a cada tecla. As configurações devem ser suficientemente
-claras, então fica como exercício ao leitor descobrir oq ue cada uma faz.
+claras, então fica como exercício ao leitor descobrir o que cada uma faz.
+
+Ou isso ou haverá um arquivo a parte explicando.
+
+\section{Conclusão}
+
+Pode-se dizer que foi (ou está sendo) um projeto interesante, especialmente dado que o grupo simplesmente decidiu fazer tudo
+em uma semana, devido a provas e a completa ausência de processamento multithreading na equipe. O resultado final (ou
+parcial, ainda deve ter algo sendo feito conforme eu escrevo isso) é abaixo do esperado, mas pelo menos é jogável.
+Não existem testes, porque ninguém lembrou de fazer ainda. Não há uma tela de início nem uma de Game Over. Não tem
+Highscores. E nem tem o Konami code! Mas, algo está feito. E espero que mais desses problemas sejam resolvidos antes da
+entrega final.
 
 \end{document}
