Relatorio updated, creio eu
git-svn-id: svn://svn/henriquelima/labprog@289 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -50,7 +50,7 @@ E Yarco ainda é um nome misterioso. Tentamos inventar um backronym para ele, ma
 Com um pouco de sorte (Leia-se: O responsável pelo autoconf terminou sua parte a tempo), o pacote incluirá um configure
 funcional. Nesse caso, basta rodar o configure, rodar o make, e ser uma pessoa feliz. Caso isso não seja uma verdade,
 o configure ainda não está pronto, e nesse caso a gente culpa novamente o Haruki. Aí um make sozinho se encarrega de
-gerar o jogo.
+gerar o jogo. Caso você ainda não tenha rodado o configure. Caso tenha rodado, meus pêsames.
 
 Para remover o jogo, basta um make clean. Para remover todos os arquivos gerados, um make realclean resolve. E caso nunca
 mais queira ver esse projeto, make nuke é a opção preferencial.
@@ -140,11 +140,12 @@ Ou isso ou haverá um arquivo a parte explicando.
 
 \section{Conclusão}
 
-Pode-se dizer que foi (ou está sendo) um projeto interesante, especialmente dado que o grupo simplesmente decidiu fazer tudo
-em uma semana, devido a provas e a completa ausência de processamento multithreading na equipe. O resultado final (ou
-parcial, ainda deve ter algo sendo feito conforme eu escrevo isso) é abaixo do esperado, mas pelo menos é jogável.
-Não existem testes, porque ninguém lembrou de fazer ainda. Não há uma tela de início nem uma de Game Over. Não tem
-Highscores. E nem tem o Konami code! Mas, algo está feito. E espero que mais desses problemas sejam resolvidos antes da
-entrega final.
+Pode-se dizer que foi  um projeto interesante, especialmente dado que o grupo simplesmente decidiu fazer tudo
+em uma semana, devido a provas e a completa ausência de processamento multithreading na equipe. O resultado final
+ é um tanto abaixo do esperado, mas pelo menos é jogável. Não existem testes, porque ninguém lembrou de fazer.
+ Não há uma tela de início. E nem tem o Konami code! Mas, algo está feito. Pelo menos, espero eu, fica a lição de
+não empurrar tanto um projeto com a barriga.
+
+...E de não querer projetos próximos às datas de beta de StarCraft II e da copa.
 
 \end{document}
